src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>rstk__Quote_csoproduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configured Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>CSO Product Quotes</relationshipLabel>
        <relationshipName>csoproductQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Quote_price__c</fullName>
        <label>Sales Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Quote_rsjob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote is for a Rootstock Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__Quote_salesdiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Sydiv Quotes</relationshipLabel>
        <relationshipName>salesdivQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Quote_sohdr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Order Header</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>SO HDR Quotes</relationshipLabel>
        <relationshipName>sohdrQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Quote_soline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>SO Line Quotes</relationshipLabel>
        <relationshipName>solineQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>